@@ -1,5 +1,14 @@
 #include "../../dynload/dynload.h"
+#include "../../dyncall/dyncall_macros.h"
 #include <assert.h>
+
+#ifdef DC_WINDOWS
+#define DLL_EXPORT __declspec( dllexport )
+#else
+#define DLL_EXPORT
+#endif
+
+DLL_EXPORT double add_dd_d(double x, double y);
 
 double add_dd_d(double x, double y) 
 {
